--- a/templates/deployment_request_form.html.twig
+++ b/templates/deployment_request_form.html.twig
@@ -47,7 +47,7 @@
             <div class="ui field">
                 <input type="submit" class="ui submit primary button" name="_action" value="{% if is_existing %}Save{% else %}Create{% endif %} deployment request" />
                 <a href="{{cancel_path|default('javascript:window.history.go(-1)')}}" class="ui secondary button">Cancel</a>
-                {% if is_existing %}
+                {% if is_existing and security.isGranted('delete',deployment_request) %}
                     <input type="submit" class="ui red right floated button" name="_action" value="Delete"
                            onclick="return confirm('Are you sure you want to delete?')" />
                 {% endif %}
