--- a/templates/project_form.html.twig
+++ b/templates/project_form.html.twig
@@ -58,6 +58,28 @@
                 {{ _self.fieldError(errors|default([]), 'checklist_templates') }}
             </div>
             <div class="ui field basic segment">
+                <label class="ui top attached large label">Deployment Duration Approximation</label>
+                <div>
+                    <div class="ui field basic segment">
+                        <div id="deployment_duration_slider" class="ui labeled ticked slider"></div>
+                        <input id="deployment_duration_input" type="hidden" value="{{ project.approx_deployment_duration|abs }}" name="approx_deployment_duration" />
+                    </div>
+                    Approximation of how long will a deployment normally be running. This is to determine which deployment is currently running and make it blink. Set 0 to disable this feature.
+                </div>
+                <script>
+                    $(function () {
+                        $('#deployment_duration_slider').slider({
+                            max: 12,
+                            smooth: true,
+                            start: {{ project.approx_deployment_duration|abs }},
+                            onChange: function (v) {
+                                $('#deployment_duration_input').val(v);
+                            }
+                        });
+                    });
+                </script>
+            </div>
+            <div class="ui field basic segment">
                 <label class="ui top attached large label">Private Project</label>
                 <div class="ui checkbox">
                     <input type="checkbox" value="1" name="private" {% if project.private %}checked="checked"{% endif %} />
